2001-06-14  Philippe Elie  <ph_e@club-internet.fr>

	* op_events.c: struct op_unit_mask, struct op_unit_desc allow up to
	  seven unit masks. Reflect this change in data, op_check_unit_mask()
	  and callers of op_check_unit_mask().

2001-06-12  John Levon  <moz@compsoc.man.ac.uk>

	* results/intro: tidy up

	* results/kernel-compile/time-aves.pl: fix regexps
 
	* results/latex/: results from the LaTeX runs
 
2001-06-09  Philippe Elie  <ph_e@club-internet.fr>

	* op_start: avoid chmod to a non existing directory and setup access
	  mode from 700 to 755. Replace use of the sysctl utility by a
	  do_sysctl() function.

	* gui/oprofile: some cleanup and bugfix.

	* pp/oprofpp.c: add new output options --list-all-symbols-details,
	  --output-linenr-info

	* doc/oprofile.1.in:
	* doc/oprofile.sgml: update documentation about the new oprofpp
	  option

2001-06-09  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: fix build with CONFIG_MODVERSIONS
	  enabled.
 
2001-06-04  John Levon  <moz@compsoc.man.ac.uk>

	* dae/oprofiled.c: move logfile message to
	  before close(1) to not need to use stderr
 
2001-06-03  John Levon  <moz@compsoc.man.ac.uk>

	* gui/: new directory

	* Makefile.in:
	* configure.in:
	* gui/.cvsignore:
	* gui/Makefile.in:
	* gui/oprofile: Philippe's prototype tcl/tk startup
	  script. Requires more work.
 
2001-06-03  John Levon  <moz@compsoc.man.ac.uk>

	* pp/oprofpp.h: remove libiberty header that was
	  apparently breaking install on slackware
 
2001-06-03  John Levon  <moz@compsoc.man.ac.uk>

	* README: update
 
2001-06-03  Philippe Elie  <ph_e@club-internet.fr>

	* op_events.c: allow unit mask option to be bit mask

2001-06-01  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_proc.c: actually use opd_get_count -
	  fix bug with counter 1 reported results

	* dae/op_start: fix broken shell scripting

	* dae/oprofpp.c: fix list-symbols output

2001-04-30  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_start: better error reporting
