@@ -1,3 +1,8 @@
+2001-06-16  Philippe Elie  <ph_e@club-internet.fr>
+
+	* op_events.c: op_check_events() fix two bad use of 
+	  op_check_unit_mask(). op_get_um_desc() fix a typo.
+
 2001-06-14  Philippe Elie  <ph_e@club-internet.fr>
 
 	* op_events.c: struct op_unit_mask, struct op_unit_desc allow up to
@@ -14,7 +19,7 @@
  
 2001-06-09  Philippe Elie  <ph_e@club-internet.fr>
 
-	* op_start: avoid chmod to a non existing directory and setup access
+	* dae/op_start: avoid chmod to a non existing directory and setup access
 	  mode from 700 to 755. Replace use of the sysctl utility by a
 	  do_sysctl() function.
 
